--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -23,7 +23,6 @@
 }
 
 .external-links > *:hover {
-    padding-right: 1.2rem; 
     transition: transform 0.3s ease, opacity 0.3s ease;
     transform: scale(1.15);
     opacity: 1;
